After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728157 - crashes with gtk3 3.12.1
crashes with gtk3 3.12.1
Status: RESOLVED FIXED
Product: notification-daemon
Classification: Other
Component: general
0.7.x
Other Linux
: Normal critical
: ---
Assigned To: notification-daemon-maint
notification-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2014-04-14 07:48 UTC by gimmeespam
Modified: 2014-10-30 00:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdb backtrace (4.15 KB, text/plain)
2014-04-14 15:38 UTC, gimmeespam
  Details
backtrace (4.85 KB, text/plain)
2014-06-07 17:03 UTC, intrigeri
  Details
[PATCH] Fix GSource usage with recent GLib (1.37 KB, patch)
2014-10-08 22:01 UTC, Balló György
committed Details | Review

Description gimmeespam 2014-04-14 07:48:47 UTC
I'm using Arch Linux with openbox, gtk3 3.12.1, and notification-daemon 0.7.6 (no gnome).

The notification displays but then the daemon crashes when the timeout is reached

it worked ok with gtk3 3.10.7


[jmc@Arch64 ~]$ /usr/lib/notification-daemon-1.0/notification-daemon &
[1] 681
[jmc@Arch64 ~]$ notify-send subject details
[jmc@Arch64 ~]$ 
(notification-daemon:681): GLib-CRITICAL **: Source ID 8 was not found when attempting to remove it
[jmc@Arch64 ~]$ 
[1]+  Trace/breakpoint trap   (core dumped) /usr/lib/notification-daemon-1.0/notification-daemon
Comment 1 André Klapper 2014-04-14 10:28:54 UTC
Could you provide a stacktrace of the crash please?
Comment 2 gimmeespam 2014-04-14 15:38:44 UTC
Created attachment 274285 [details]
gdb backtrace
Comment 3 intrigeri 2014-06-07 17:02:35 UTC
I see the same on current Debian unstable. I'll attach a backtrace shortly.

(FWIW, the backtrace looks quite different from the one on #677815, so likely it's a different problem.)
Comment 4 intrigeri 2014-06-07 17:03:36 UTC
Created attachment 278091 [details]
backtrace
Comment 5 Joachim Breitner 2014-07-19 15:58:57 UTC
I observed the same error message:

(notification-daemon:25080): GLib-CRITICAL **: Source ID 17 was not found when attempting to remove it
Trace/Breakpoint ausgelöst
Comment 6 intrigeri 2014-10-05 18:55:17 UTC
FYI this is tracked as https://bugs.debian.org/747465 in Debian.
Comment 7 Balló György 2014-10-08 22:01:19 UTC
Created attachment 288082 [details] [review]
[PATCH] Fix GSource usage with recent GLib

I created a patch which fixes the problem.
Comment 8 intrigeri 2014-10-09 11:01:34 UTC
(In reply to comment #7)
> I created a patch which fixes the problem.

Tested on current Debian unstable, in a GNOME Flashback environment => I confirm this fixes the crash I was experiencing. Thanks!

Any developer willing to review and merge this patch?
Comment 9 Alberts Muktupāvels 2014-10-30 00:33:14 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.